[package]
name = "tracing-bunyan-formatter"
version = "0.1.1-alpha.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/tracing-bunyan-formatter"
documentation = "https://docs.rs/tracing-bunyan-formatter/"
readme = "README.md"

description = "A Bunyan formatter for the tracing crate"

keywords = ["logging", "metrics", "tracing", "bunyan", "subscriber"]
categories = ["debugging", "profiling"]

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { version = "0.1.13", features = ["log-always", "log"] }
tracing-subscriber = "0.2.5"
tracing-log = { version = "0.1" }
log = "0.4.8"
serde_json = { version = "1.0.52", features = ["arbitrary_precision"] }
tracing-serde = "0.1.1"
serde = "1.0.106"
gethostname = "0.2.1"
tracing-core = "0.1.10"
chrono = "0.4.11"

[dev-dependencies]
lazy_static = "1.4.0"
