[package]
name = "tracing-bunyan-formatter"
version = "0.1.2"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/tracing-bunyan-formatter"
documentation = "https://docs.rs/tracing-bunyan-formatter/"
readme = "README.md"

description = "A Bunyan formatter for the tracing crate"

keywords = ["logging", "metrics", "tracing", "bunyan", "subscriber"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["registry", "fmt"] }
tracing-log = { version = "0.1" }
log = "0.4.8"
serde_json = { version = "1.0.52", features = ["arbitrary_precision"] }
serde = "1.0.106"
gethostname = "0.2.1"
tracing-core = "0.1.10"
chrono = "0.4.11"

[dev-dependencies]
lazy_static = "1.4.0"
tracing = { version = "0.1.13", default-features = false, features = ["log", "std", "attributes"] }
