[package]
name = "tracing-bunyan-formatter"
version = "0.3.10"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/tracing-bunyan-formatter"
documentation = "https://docs.rs/tracing-bunyan-formatter/"
readme = "README.md"

description = "A Bunyan formatter for the tracing crate"

keywords = ["logging", "metrics", "tracing", "bunyan", "subscriber"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[lib]
path = "src/lib.rs"

[features]
default = ["hostname"]
arbitrary-precision = ["serde_json/arbitrary_precision"]
valuable = ["tracing/valuable", "dep:valuable", "dep:valuable-serde"]
hostname =  ["gethostname"]
 
[dependencies]
tracing = { version = "0.1.13", default-features = false, features = ["log", "std"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["registry", "fmt"] }
tracing-log = { version = "0.1" }
log = "0.4.8"
serde_json = { version = "1.0.52" }
serde = "1.0.106"
gethostname = { version = "0.2.1", optional = true }
tracing-core = "0.1.10"
time = { version = "0.3", default-features = false, features = ["formatting"] }
ahash = "0.8.2"
valuable = { version = "0.1.0", optional = true }
valuable-serde = { version = "0.1.0", optional = true }

[dev-dependencies]
claims = "0.6.0"
lazy_static = "1.4.0"
tracing = { version = "0.1.13", default-features = false, features = ["log", "std", "attributes"] }
time = { version = "0.3", default-features = false, features = ["formatting", "parsing", "local-offset"] }

[[example]]
name = "valuable"
required-features = ["valuable", "valuable/derive"]
